--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2">
   <id>net.codestats.plugin.atom.intellij</id>
   <name>Code::Stats</name>
-  <version>1.0</version>
+  <version>1.0.1</version>
   <vendor email="mikko.ahlroth@gmail.com" url="https://codestats.net/">CodeStats</vendor>
 
   <description><![CDATA[
@@ -9,8 +9,12 @@
     ]]></description>
 
   <change-notes><![CDATA[
+  <h1>1.0.1</h1>
+  <p>Fixed an issue where the plugin would crash when closing a project and opening a new one.</p>
 
-    ]]>
+  <h1>1.0</h1>
+  <p>Initial version</p>
+  ]]>
   </change-notes>
 
   <!-- please see http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
