--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin version="2">
   <id>net.codestats.plugin.atom.intellij</id>
   <name>Code::Stats</name>
-  <version>1.0.1</version>
+  <version>1.0.2</version>
   <vendor email="mikko.ahlroth@gmail.com" url="https://codestats.net/">CodeStats</vendor>
 
   <description><![CDATA[
@@ -9,6 +9,9 @@
     ]]></description>
 
   <change-notes><![CDATA[
+  <h1>1.0.2</h1>
+  <p>Attempt to fix certificate errors caused by Java not having the Letsencrypt certificates in the trust store by default.</p>
+
   <h1>1.0.1</h1>
   <p>Fixed an issue where the plugin would crash when closing a project and opening a new one.</p>
 
